docs: add disclaimer for M1/ARM users

--- a/notebooks/demo_import_peekingduck.ipynb
+++ b/notebooks/demo_import_peekingduck.ipynb
@@ -34,7 +34,9 @@
     "\n",
     "live_node = input.live.Node()\n",
     "``` \n",
-    "we recommend the latter as it isolates the namespace to avoid potential conflicts."
+    "we recommend the latter as it isolates the namespace to avoid potential conflicts.\n",
+    "\n",
+    "*Note: Users with M1 Mac or ARM-based devices may have to use the former method due to package incompatibility.*"
    ]
   },
   {
