docs: update tutorial using new imports

--- a/notebooks/demo_import_peekingduck.ipynb
+++ b/notebooks/demo_import_peekingduck.ipynb
@@ -70,7 +70,7 @@
     "\n",
     "To change the node configuration, you can pass the new values to the `Node()` constructor as keyword arguments.\n",
     "\n",
-    "Refer to the [API Documentation](#link) for the configurable settings for each node."
+    "Refer to the [API Documentation](https://peekingduck.readthedocs.io/en/stable/master.html#api-documentation) for the configurable settings for each node."
    ]
   },
   {
