fix: convert BGR2RGB in yolo LP node and update demo notebook

--- a/notebooks/demo_import_peekingduck.ipynb
+++ b/notebooks/demo_import_peekingduck.ipynb
@@ -244,7 +244,7 @@
     "    image_orig = cv2.cvtColor(image_orig, cv2.COLOR_BGR2RGB)\n",
     "    height, width = image_orig.shape[:2]\n",
     "\n",
-    "    image = element[0].numpy().astype(\"uint8\")[0].copy()\n",
+    "    image = cv2.cvtColor(element[0].numpy().astype(\"uint8\")[0], cv2.COLOR_RGB2BGR)\n",
     "\n",
     "    yolo_lp_input = {\"img\": image}\n",
     "    yolo_lp_output = yolo_lp_node.run(yolo_lp_input)\n",
