docs: update tutorial writing based on comments

--- a/notebooks/demo_import_peekingduck.ipynb
+++ b/notebooks/demo_import_peekingduck.ipynb
@@ -24,11 +24,11 @@
     "\n",
     "You can also do\n",
     "```\n",
-    "from peekingduck.pipeline.nodes.input import live as pkd_live\n",
+    "from peekingduck.pipeline.nodes.draw import bbox as pkd_bbox\n",
     "\n",
-    "live_node = pkd_live.Node()\n",
+    "bbox_node = pkd_bbox.Node()\n",
     "```\n",
-    "to avoid potential name conflicts.\n"
+    "to avoid potential name conflicts."
    ]
   },
   {
