docs: remove TODO comment and update line numbers

--- a/notebooks/demo_import_peekingduck.ipynb
+++ b/notebooks/demo_import_peekingduck.ipynb
@@ -151,7 +151,7 @@
     "        self.reader = easyocr.Reader([\"en\"], gpu=use_gpu)\n",
     "\n",
     "    def read(self, image):\n",
-    "        \"\"\"Reads text from the image and joins multiple multiple strings to a\n",
+    "        \"\"\"Reads text from the image and joins multiple strings to a\n",
     "        single string.\n",
     "        \"\"\"\n",
     "        return \" \".join(self.reader.readtext(image, detail=0))"
