docs: update demo notebook title

--- a/notebooks/calling_peekingduck_in_python.ipynb
+++ b/notebooks/calling_peekingduck_in_python.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Import PeekingDuck as a Module Demo\n",
+    "# Calling PeekingDuck in Python\n",
     "\n",
     "The modular design of PeekingDuck allows users to pick and choose the nodes they want to use. \n",
     "\n",
