refactor: use preprocessing instead of utils for image_dataset_from_directory

--- a/notebooks/calling_peekingduck_in_python.ipynb
+++ b/notebooks/calling_peekingduck_in_python.ipynb
@@ -11,7 +11,7 @@
     "Users are also able to use PeekingDuck nodes with external libraries when designing their pipeline.\n",
     "\n",
     "In this notebook, we demonstrate how to users can construct a custom PeekingDuck pipeline using:\n",
-    "- Data loaders such as [`tf.keras.utils.image_dataset_from_directory`](https://www.tensorflow.org/api_docs/python/tf/keras/utils/image_dataset_from_directory) (available in `tensorflow>=2.3.0`),\n",
+    "- Data loaders such as [`tf.keras.preprocessing.image_dataset_from_directory`](https://www.tensorflow.org/api_docs/python/tf/keras/preprocessing/image_dataset_from_directory) (available in `tensorflow>=2.3.0`),\n",
     "- External models (not implemented as PeekingDuck nodes) such [`easyocr`](https://pypi.org/project/easyocr/), and\n",
     "- Visualization packages such as [`matplotlib`](https://pypi.org/project/matplotlib/)\n"
    ]
@@ -129,7 +129,7 @@
    ],
    "source": [
     "data_dir = Path.cwd().resolve() / \"data\" / \"oidv6\" / \"train\"\n",
-    "dataset = tf.keras.utils.image_dataset_from_directory(data_dir, batch_size=1, shuffle=False)"
+    "dataset = tf.keras.preprocessing.image_dataset_from_directory(data_dir, batch_size=1, shuffle=False)"
    ]
   },
   {
