docs: update tutorial to recommend one-level-higher import over individual nodes

--- a/notebooks/calling_peekingduck_in_python.ipynb
+++ b/notebooks/calling_peekingduck_in_python.ipynb
@@ -22,13 +22,13 @@
       "source": [
         "## Import the necessary modules\n",
         "\n",
-        "You can also do\n",
+        "You can also import PeekingDuck modules using\n",
         "```\n",
-        "from peekingduck.pipeline.nodes.draw import bbox as pkd_bbox\n",
+        "from peekingduck.pipeline.nodes import draw\n",
         "\n",
-        "bbox_node = pkd_bbox.Node()\n",
+        "bbox_node = draw.bbox.Node()\n",
         "```\n",
-        "to avoid potential name conflicts."
+        "to isolate the namespace to avoid potential conflicts."
       ]
     },
     {
@@ -290,7 +290,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.8.12"
+      "version": "3.8.13"
     },
     "orig_nbformat": 4
   },
