feat: multiple data_module config support, stratify_by

--- a/peekingduck/training/rsna.ipynb
+++ b/peekingduck/training/rsna.ipynb
@@ -2,18 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/opt/homebrew/Caskroom/miniforge/base/envs/trainer/lib/python3.10/site-packages/tqdm/auto.py:22: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from hydra import initialize, compose\n",
     "from pathlib import Path\n",
@@ -33,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -42,7 +33,7 @@
        "'./data/rsna'"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -53,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,16 +56,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "54706"
+       "0"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -85,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -94,7 +85,7 @@
        "'./data/rsna/train.csv'"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -105,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -114,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -153,6 +144,7 @@
        "      <th>machine_id</th>\n",
        "      <th>difficult_negative_case</th>\n",
        "      <th>image_path</th>\n",
+       "      <th>class_name</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -173,6 +165,7 @@
        "      <td>29</td>\n",
        "      <td>False</td>\n",
        "      <td>data/rsna/10006/462822612.png</td>\n",
+       "      <td>benign</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -191,6 +184,7 @@
        "      <td>29</td>\n",
        "      <td>False</td>\n",
        "      <td>data/rsna/10006/1459541791.png</td>\n",
+       "      <td>benign</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -209,6 +203,7 @@
        "      <td>29</td>\n",
        "      <td>False</td>\n",
        "      <td>data/rsna/10006/1864590858.png</td>\n",
+       "      <td>benign</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -227,6 +222,7 @@
        "      <td>29</td>\n",
        "      <td>False</td>\n",
        "      <td>data/rsna/10006/1874946579.png</td>\n",
+       "      <td>benign</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -245,9 +241,11 @@
        "      <td>21</td>\n",
        "      <td>True</td>\n",
        "      <td>data/rsna/10011/220375232.png</td>\n",
+       "      <td>benign</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
+       "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
@@ -281,6 +279,7 @@
        "      <td>49</td>\n",
        "      <td>False</td>\n",
        "      <td>data/rsna/9973/1729524723.png</td>\n",
+       "      <td>benign</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>54702</th>\n",
@@ -299,6 +298,7 @@
        "      <td>216</td>\n",
        "      <td>False</td>\n",
        "      <td>data/rsna/9989/63473691.png</td>\n",
+       "      <td>benign</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>54703</th>\n",
@@ -317,6 +317,7 @@
        "      <td>216</td>\n",
        "      <td>False</td>\n",
        "      <td>data/rsna/9989/1078943060.png</td>\n",
+       "      <td>benign</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>54704</th>\n",
@@ -335,6 +336,7 @@
        "      <td>216</td>\n",
        "      <td>True</td>\n",
        "      <td>data/rsna/9989/398038886.png</td>\n",
+       "      <td>benign</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>54705</th>\n",
@@ -353,10 +355,11 @@
        "      <td>216</td>\n",
        "      <td>True</td>\n",
        "      <td>data/rsna/9989/439796429.png</td>\n",
+       "      <td>benign</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>54706 rows × 15 columns</p>\n",
+       "<p>54706 rows × 16 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -386,29 +389,51 @@
        "54704         0     0.0        0       C         216                     True   \n",
        "54705         0     0.0        0       C         216                     True   \n",
        "\n",
-       "                           image_path  \n",
-       "0       data/rsna/10006/462822612.png  \n",
-       "1      data/rsna/10006/1459541791.png  \n",
-       "2      data/rsna/10006/1864590858.png  \n",
-       "3      data/rsna/10006/1874946579.png  \n",
-       "4       data/rsna/10011/220375232.png  \n",
-       "...                               ...  \n",
-       "54701   data/rsna/9973/1729524723.png  \n",
-       "54702     data/rsna/9989/63473691.png  \n",
-       "54703   data/rsna/9989/1078943060.png  \n",
-       "54704    data/rsna/9989/398038886.png  \n",
-       "54705    data/rsna/9989/439796429.png  \n",
+       "                           image_path class_name  \n",
+       "0       data/rsna/10006/462822612.png     benign  \n",
+       "1      data/rsna/10006/1459541791.png     benign  \n",
+       "2      data/rsna/10006/1864590858.png     benign  \n",
+       "3      data/rsna/10006/1874946579.png     benign  \n",
+       "4       data/rsna/10011/220375232.png     benign  \n",
+       "...                               ...        ...  \n",
+       "54701   data/rsna/9973/1729524723.png     benign  \n",
+       "54702     data/rsna/9989/63473691.png     benign  \n",
+       "54703   data/rsna/9989/1078943060.png     benign  \n",
+       "54704    data/rsna/9989/398038886.png     benign  \n",
+       "54705    data/rsna/9989/439796429.png     benign  \n",
        "\n",
-       "[54706 rows x 15 columns]"
+       "[54706 rows x 16 columns]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0    53548\n",
+       "1     1158\n",
+       "Name: cancer, dtype: int64"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df[\"cancer\"].value_counts()"
    ]
   },
   {
