--- a/peekingduck/training/tests/rsna.ipynb
+++ b/peekingduck/training/tests/rsna.ipynb
@@ -1852,7 +1852,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.8"
+   "version": "3.10.8 | packaged by conda-forge | (main, Nov 22 2022, 08:25:29) [Clang 14.0.6 ]"
   },
   "orig_nbformat": 4,
   "vscode": {
