feat: vegfru dataset

--- a/peekingduck/training/tests/rsna.ipynb
+++ b/peekingduck/training/tests/rsna.ipynb
@@ -1838,7 +1838,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "trainer",
+   "display_name": "train",
    "language": "python",
    "name": "python3"
   },
@@ -1857,7 +1857,7 @@
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "53390442d6eec5aea77cbc4145ee98f31622ea5a9408eff13a818af2150b8a26"
+    "hash": "1acd9ee5c5bab15f7273df084afe797a621b6ddf34701f53604929eaea96c2cd"
    }
   }
  },
